--- a/backend/package.json
+++ b/backend/package.json
@@ -15,13 +15,15 @@
     "helmet": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.5",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/yup": "^0.29.7",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "eslint": "^5.16.0",
